--- a/style.css
+++ b/style.css
@@ -16,12 +16,18 @@ body {
   display: flex;
   flex-direction: column;
 
-  width: 30%;
+  width: 40%;
   height: auto;
   padding: 2rem;
 
   border: 2px solid black;
   border-radius: 16px;
+}
+
+@media (max-width:768px) {
+  .changelog-component {
+    width: 80%;
+  }
 }
 
 .changelog-header {
@@ -63,7 +69,7 @@ body {
 }
 
 .data {
-  text-align: left;
+  text-align: right;
   width: 30%;
   color: grey;
 }
@@ -92,7 +98,7 @@ body {
 }
 
 .line {
-  height: 64px;
+  height: 96px;
   width: 3px;
   background-color: black;
 }
